# BinaryCodeGenMatrix

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_usage.cpp
include/BinaryCodeGenMat/: BinaryCodeGenMat.hpp
src/: BinaryCodeGenMat.cpp
tests/: CMakeLists.txt  test_BinaryCodeGenMat.cpp
